# viewer_server

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  config.json  pyproject.toml  sql_app.db
config/apache2/: 000-default.conf  ports.conf
config/launcher/: config.json
scripts/: build-client.sh  dev-2d-server.sh  dev-3d-server.sh  dev-client.sh  dev-server.sh  dev.sh  entrypoint.sh  install.sh
src/: app.py
src/db/: db.py  gino_sanic.py
src/models/: user.py
src/module/react-client/: .env.development  .eslintignore  .eslintrc.cjs  .prettierignore  package.json
src/module/react-client/src/: App.css  App.tsx  main.tsx
src/module/vtkserver/: vtk_protocol.py  vtk_server.py
src/routes/: __init__.py  admin.py  wado.py
src/settings/: config.py
viewerserver/: main.py
viewerserver/config/: session.py  settings.py
viewerserver/db/: db.py
viewerserver/db/model/: base_model.py
viewerserver/db/repository/: base_repository.py
viewerserver/db/schema/: base_schema.py
viewerserver/module/3dserver/: .gitignore  README.md  config.json  vtk_protocol.py  vtk_server.py
viewerserver/module/3dserver/apache2/: 000-default.conf  Dockerfile  README.md
viewerserver/module/3dserver/cropping/: crop_freehand.py  utils.py
viewerserver/module/client/: api.py  schema.py  service.py
viewerserver/module/coupons/: api.py  model.py  repository.py  schema.py
viewerserver/module/sessions/: model.py  repository.py  scheduler.py  schema.py
viewerserver/module/wado/: api.py  service.py
viewerserver/responses/: APIResponse.py  BaseAPIResponse.py  __init__.py
(+16 files in other folders)
