[tool.poetry]
name = "gino-sanic"
version = "0.1.0"
description = ""
authors = ["Phong Tran Duc <phtran.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "gino_sanic"}]

[tool.poetry.dependencies]
python = "^3.9"
sanic = "22.6.2"
sanic-ext = "22.6.2"
sanic-dantic = "1.2.2"
gino = "1.0.1"
requests = "2.28.2"
wslink = "*"
vtk = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
