[tool.poetry]
name = "viewerserver"
version = "0.1.0"
description = ""
authors = ["Phong Tran Duc <phtran.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.97.0"
requests = "2.28.2"
wslink = "*"
vtk = "*"
uvicorn = "^0.22.0"
SQLAlchemy = "^1.4.25"
aiosqlite = "^0.19.0"
httpx = "0.23.3"
pydicom = "^2.4.1"
websockets="*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"